<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tvTituloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textColor="@color/vermelho_titulo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textStyle="bold"
        android:textColor="@color/preto_texto"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/dica_email"
        android:inputType="textEmailAddress"
        android:background="@color/azul_claro_fundo_input"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvLabelSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_senha"
        android:textStyle="bold"
        android:textColor="@color/preto_texto"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/dica_senha"
        android:inputType="textPassword"
        android:background="@color/azul_claro_fundo_input"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_entrar"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/laranja_principal"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_criar_conta"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/azul_botoes" />

</LinearLayout>