<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvTituloTarefas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_tarefas"
            android:textColor="@color/azul_marinho_texto"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVoltarTarefas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_voltar"
            android:textColor="@color/laranja_principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <EditText
            android:id="@+id/etNovaTarefa"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:hint="@string/dica_nova_tarefa"
            android:inputType="text"
            android:background="@color/cinza_fundo_input"
            android:padding="12dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnAdicionarTarefa"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:text="@string/btn_add"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/azul_botoes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="20dp"
        android:elevation="3dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cbTarefa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tvTarefa1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tarefa_exemplo_1"
            android:textColor="@color/azul_marinho_texto"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="20dp"
        android:elevation="3dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cbTarefa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tvTarefa2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tarefa_exemplo_2"
            android:textColor="@color/azul_marinho_texto"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>